[project]
name = "city-guide"
version = "0.1.0"
description = ""
authors = [
    {name = "Max G",email = "Max@mail.com"}
]
readme = "README.md"
requires-python = ">=3.12.4,<4.0"
dependencies = [
    "streamlit (>=1.44.0,<2.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-groq (>=0.3.1,<0.4.0)",
    "langchain-core (>=0.3.49,<0.4.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "uuid (>=1.30,<2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
